--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,8 @@ globals:
 rules:
   angular/controller-as: off
   angular/di: [error, array]
-  indent: [error, 4]
+  #indent: [error, 4]
+  indent: off
   quotes: off
 
   # The following are set to 'warn' level until they can be fixed
