--- a/.github/workflows/autoBuildandDeploy.js.yml
+++ b/.github/workflows/autoBuildandDeploy.js.yml
@@ -1,13 +1,12 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
+# This workflow will do a clean install of bahmniapps dependencies, node dependencies, and build the bahmniapps source code
+# This workflow will be triggered only when there's a push to the master branch of the repo
+# i.e. when a pull request is merged or when a commit is made directly to the master branch
 name: Autobuild CI
 
 on:
   push:
-    branches: [ release-0.92 ]
-  pull_request:
-    branches: [ release-0.92 ]
+    branches: [ master ]
+
 defaults:
   run:
     working-directory: ui
